kubernetes/skywalker/istio-system/gateway/feldman-in.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: feldman-in
  namespace: istio-system

spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "feldman.in"
        - "*.feldman.in"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "feldman.in"
        - "*.feldman.in"
      tls:
        mode: SIMPLE
        credentialName: feldman-in-tls
    - port:
        number: 5432
        name: tcp-postgres
        protocol: TCP
      hosts:
        - "*.feldman.in"
    - port:
        number: 3306
        name: tcp-mariadb
        protocol: TCP
      hosts:
        - "*.feldman.in"
    - port:
        number: 389
        name: tcp-ldap
        protocol: TCP
      hosts:
        - "*.feldman.in"
    - port:
        number: 636
        name: tcp-ldaps
        protocol: TCP
      hosts:
        - "*.feldman.in"
